--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <script type="text/javascript" src="EtchASketch.js"></script>
 </head>
 <body>
     
@@ -15,5 +14,7 @@
         <!-- make 16 div boxes in js -->
     </div>
 
+
+    <script type="text/javascript" src="./EtchASketch.js"></script>
 </body>
 </html>
