--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
 </head>
 <body>
-    
-    <div id="board">
-        <!-- make 16 div boxes in js -->
+    <div class="container">
+        <h1>Etch-A-Sketch</h1>
+        <button id="resetButton" onclick="resetCells()">Reset</button>
+        <div id="board">
+            <!-- make 16 div boxes in js -->
+        </div>
     </div>
 
-
+    
     <script type="text/javascript" src="./EtchASketch.js"></script>
 </body>
 </html>
